--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_testbed">Testbed</string>
     <string name="title_activity_rooms">RoomsActivity</string>
+    <string name="title_activity_register">Register</string>
+    <string name="title_activity_active_room">ActiveRoom</string>
 </resources>
