--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="title_activity_testbed">Testbed</string>
     <string name="title_activity_rooms">RoomsActivity</string>
     <string name="title_activity_register">Register</string>
-    <string name="title_activity_active_room">ActiveRoom</string>
+    <string name="title_activity_active_room">Active Room</string>
+    <string name="title_activity_create_room">Create Room</string>
+
 </resources>
