Linked all activities and started putting some communication logic in between activities.
All activities are logically linked and most of the logic for
cross-population is "working". We need to fix some down-stream
population logic for the Room object as well as a few other loose ends.
There's approximately 10 million TODO items, now.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="title_activity_register">Register</string>
     <string name="title_activity_active_room">Active Room</string>
     <string name="title_activity_create_room">Create Room</string>
+    <string name="title_activity_edit_room">Edit Room</string>
 
 </resources>
