Intermediary steps to get support functions working.
A decent amount of work going into stuff like location detection and
private rooms went into this push. Everything pushed is fairly
incomplete and there's a new function of the main activity's debug
button to test the map activity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="title_activity_active_room">Active Room</string>
     <string name="title_activity_create_room">Create Room</string>
     <string name="title_activity_edit_room">Edit Room</string>
+    <string name="title_activity_active_location">Map</string>
 
 </resources>
