--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_testbed">Testbed</string>
-    <string name="title_activity_rooms">Available Frequencies</string>
+    <string name="title_activity_rooms">Open Frequencies</string>
     <string name="title_activity_register">Register</string>
     <string name="title_activity_active_room">Active Frequency</string>
     <string name="title_activity_create_room">Create Frequency</string>
